--- a/storage/scss/styles.scss
+++ b/storage/scss/styles.scss
@@ -1,11 +1,16 @@
-body {
-  background: green;
-}
-header{
-  background: red;
-}
-.content {
-  .yandex-button {
-    background: black;
+header {
+  padding: 30px 0;
+  box-shadow: 0 12px 65px rgba(0, 0, 0, .15);
+  background-color: black;
+  color: white;
+  margin-bottom: 10px;
+
+  .header {
+    display: flex;
+
+    &-text {
+      margin-left: 10px;
+      line-height: 50px;
+    }
   }
 }
