--- a/Modules/Clouddiskprovider/clouddiskprovider.scss
+++ b/Modules/Clouddiskprovider/clouddiskprovider.scss
@@ -10,8 +10,12 @@ $mainColor: #61CC4A;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .providers {
@@ -108,8 +112,35 @@ $mainColor: #61CC4A;
     }
   }
 
-  &-form {
+  &-upload {
     flex: 2;
+
+    &-form {
+      margin: 30px 0 0 20px;
+
+      input[type='submit'] {
+        display: block;
+        margin: 10px auto;
+        box-sizing: border-box;
+        position: relative;
+        overflow: hidden;
+        text-align: center;
+        box-shadow: none;
+        display: block;
+        padding: 10px 20px;
+        border: 1px solid $mainColor;
+        outline: none;
+        color: #000;
+        line-height: 1em;
+        border-radius: 5px;
+        text-decoration: none;
+      }
+
+      input[type='submit']:hover {
+        color: white;
+        background: linear-gradient(90deg, #11df9e, $mainColor);
+      }
+    }
   }
 }
 
