--- a/storage/scss/styles.scss
+++ b/storage/scss/styles.scss
@@ -4,13 +4,47 @@ header {
   background-color: black;
   color: white;
   margin-bottom: 10px;
+}
 
-  .header {
-    display: flex;
+.header {
+  display: flex;
+  justify-content: flex-start;
 
-    &-text {
-      margin-left: 10px;
-      line-height: 50px;
-    }
+  &__link {
+    order: 1;
+  }
+
+  &__text {
+    order: 2;
+    flex-basis: 30%;
+    margin-left: 10px;
+    line-height: 50px;
+  }
+
+  &__contact-block {
+    order: 3;
+    flex-basis: 60%;
+    text-align: center;
+  }
+}
+
+.contact-link{
+  color: white;
+  text-decoration: none;
+  display: block;
+  width: fit-content;
+}
+
+.contact-link:hover{
+  color: #61CC4A;
+}
+
+.contact-block {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+
+  &__contact-link{
+    margin:3px 0 0 auto;
   }
 }
